# OpenLibCLI-Embedded-Demos

./: .gitattributes  .gitignore  LICENSE  README.md
Arduino/OpenLibCLI/: README.adoc  keywords.txt  library.json  library.properties  platformio.ini
Arduino/OpenLibCLI/src/: cli.c  cli.h  cli_version.h
ESP32/serial/: README.md
ESP32/serial/main/: CMakeLists.txt  Kconfig.projbuild  cli_demo_setup.c  cli_demo_setup.h  cli_transport_serial.c  cli_transport_serial.h  main.c
ESP32/telnet/: CMakeLists.txt  README.md
ESP32/telnet/main/: CMakeLists.txt  Kconfig.projbuild  cli_demo_setup.c  cli_demo_setup.h  cli_transport_telnet.c  cli_transport_telnet.h  main.c  wifi_credentials.h
RPi_Pico/serial/: CMakeLists.txt  README.md  cli_demo_setup.c  cli_demo_setup.h  cli_transport_serial.c  cli_transport_serial.h  main.c
RPi_Pico/serial/OpenLibCLI/: cli.c
RPi_Pico/telnet/: CMakeLists.txt  README.md  cli_demo_setup.c  cli_demo_setup.h  cli_transport_telnet.c  cli_transport_telnet.h  lwipopts.h  main.c  wifi_credentials.h
RPi_Pico/telnet/OpenLibCLI/: cli.c
STM32/serial/: .cproject  .mxproject  .project  CMakeLists.txt  Makefile  OpenLibCLI.ioc  README.md  STM32F103RBTX_FLASH.ld  STM32F103XX_FLASH.ld  serial Debug.launch
STM32/serial/Core/Src/: cli_demo_setup.c  (+5 more)
STM32/serial/Debug/: makefile  objects.list  serial.list  sources.mk
STM32/serial/EWARM/: OpenLibCLI.ewd  OpenLibCLI.ewp  OpenLibCLI.ewt  Project.eww  stm32f103xb_flash.icf  stm32f103xb_sram.icf
STM32/serial/MDK-ARM/: OpenLibCLI.uvguix.PC  OpenLibCLI.uvoptx  OpenLibCLI.uvprojx
docs/: create_a_issue.md
(+59 files in other folders)
